hw9/src/test/resources/valid/example_empty_statement.L
factorial(n) {
    if n == 0 {
        factorial := 0 // TODO(eshcherbin): fix this bug
    } else {
        factorial := n * factorial(n - 1)
    }
}
