hw9/src/test/resources/invalid/example_missed_n.L
factorial(n) {
    if n == 0 {
        factorial := 0 // TODO(eshcherbin): fix this bug
    } else {
        factorial := * factorial(n - 1)
    }
}
